--- a/emojiAssignment.html
+++ b/emojiAssignment.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Typeset - Interview Assignment</title>
+		<title>Assignment</title>
 		<link rel="stylesheet" type="text/css" href="css/emojiAssignment.css">
 		<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
