--- a/emojiAssignment.html
+++ b/emojiAssignment.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<div class="outerContainer">
-		  <h2 class="pageTitle">Typeset Interview Assignment</h2>
+		  <h2 class="pageTitle">Assignment</h2>
 		  <div id="submitText" class="submitText"></div>
 		  <div contenteditable="true" placeholder="Enter text here..."  id="chatDetailText" class="chatBox"></div>
 		</div>
